# course_player

./: CMakeLists.txt  README.md  TODO.md  backup.db  coursework_actual.kdev4  main.cpp  python_export.sh
.kdev4/: coursework_actual.kdev4
threads_src/: Playlist.hpp  Session.cpp  Session.hpp  common.hpp  common_sqlite.hpp  get_str.py  logged.hpp  manage_db.hpp  play.hpp  playlist.hpp  support.hpp  video_controls.hpp
threads_src/play/: CMakeLists.txt  play.hpp
threads_src/playlist/: CMakeLists.txt  playlist.hpp  support.hpp
threads_src/support/: CMakeLists.txt  playlist.hpp  sample_playlist  support.hpp
